# agno-cookbook-cn

./: README.md  STYLE_GUIDE.md  main.py  pyproject.toml
00_quickstart/: 01_agent_with_tools.py  02_agent_with_structured_output.py  03_agent_with_typed_input_output.py  04_agent_with_storage.py  05_agent_with_memory.py  06_agent_with_state_management.py  07_agent_search_over_knowledge.py  08_custom_tool_for_self_learning.py  09_agent_with_guardrails.py  10_human_in_the_loop.py  11_multi_agent_team.py  12_sequential_workflow.py  README.md  TEST_LOG.md  TEST_PROMPT.md  agent_search_over_knowledge.py  agent_with_guardrails.py  agent_with_memory.py  agent_with_state_management.py  agent_with_storage.py  agent_with_structured_output.py  agent_with_tools.py  agent_with_typed_input_output.py  custom_tool_for_self_learning.py  human_in_the_loop.py  multi_agent_team.py  run.py  sequential_workflow.py
01_demo/: README.md  db.py  registry.py  run.py
01_demo/evals/: run_evals.py  test_cases.py
02_agents/: README.md
02_agents/01_quickstart/: README.md  TEST_LOG.md  agent_with_instructions.py  agent_with_tools.py  basic_agent.py
02_agents/caching/: README.md  TEST_LOG.md  cache_model_response.py
02_agents/callable_factories/: 01_callable_tools.py  02_session_state_tools.py  03_team_callable_members.py  README.md  TEST_LOG.md
02_agents/context_compression/: README.md  TEST_LOG.md  advanced_compression.py  compression_events.py  tool_call_compression.py
02_agents/context_management/: README.md  TEST_LOG.md  few_shot_learning.md  few_shot_learning.py  filter_tool_calls_from_history.md  filter_tool_calls_from_history.py  instructions.md  instructions.py  instructions_with_state.md  instructions_with_state.py
02_agents/culture/: 01_create_cultural_knowledge.md  01_create_cultural_knowledge.py  02_use_cultural_knowledge_in_agent.md  02_use_cultural_knowledge_in_agent.py  03_automatic_cultural_management.md  03_automatic_cultural_management.py  04_manually_add_culture.md  04_manually_add_culture.py  README.md  TEST_LOG.md
02_agents/dependencies/: README.md  TEST_LOG.md  dependencies_in_context.py  dependencies_in_tools.py  dynamic_tools.py
02_agents/events/: README.md  TEST_LOG.md  basic_agent_events.py  reasoning_agent_events.py
02_agents/guardrails/: README.md  TEST_LOG.md  custom_guardrail.md  custom_guardrail.py  openai_moderation.md  openai_moderation.py  output_guardrail.md  output_guardrail.py  pii_detection.md  pii_detection.py  prompt_injection.md  prompt_injection.py
02_agents/hooks/: README.md  TEST_LOG.md  post_hook_output.py  pre_hook_input.py  session_state_hooks.py  stream_hook.py
02_agents/human_in_the_loop/: README.md  TEST_LOG.md  agentic_user_input.py  confirmation_advanced.py  confirmation_required.py  confirmation_required_mcp_toolkit.py  confirmation_toolkit.py  external_tool_execution.py  user_input_required.py
02_agents/input_and_output/: README.md  TEST_LOG.md  input_formats.py  input_schema.py  output_schema.py  (+2 more)
03_teams/: README.md  TEST_LOG.md  TEST_PROMPT.md
04_workflows/: README.md  TEST_LOG.md  TEST_PROMPT.md
05_agent_os/: README.md  TEST_LOG.md  TEST_PROMPT.md  agno_agent.py  basic.py  demo.py  translate_remaining.py
06_storage/: 01_persistent_session_storage.py  02_session_summary.py  03_chat_history.py  README.md  TEST_LOG.md  TEST_PROMPT.md
07_knowledge/: README.md  TEST_LOG.md  TEST_PROMPT.md  knowledge_tools.py  quickstart.py
08_learning/: README.md  TEST_LOG.md  TEST_PROMPT.md
09_evals/: README.md  TEST_LOG.md  TEST_PROMPT.md
10_reasoning/: README.md  TEST_LOG.md  TEST_PROMPT.md
11_memory/: 01_agent_with_memory.py  02_agentic_memory.py  03_agents_share_memory.py  04_custom_memory_manager.py  05_multi_user_multi_session_chat.py  06_multi_user_multi_session_chat_concurrent.py  07_share_memory_and_history_between_agents.py  08_memory_tools.py  README.md  TEST_LOG.md  TEST_PROMPT.md
tmp/: agents.db
(+1003 files in other folders)
